Fix user info block visiblity with theme.

--- a/sass/styles/base/_empty.sass
+++ b/sass/styles/base/_empty.sass
@@ -3,6 +3,7 @@ body.th-none
   .tab-item.selected,
   #turnStyles .ts-tab.active,
   .room-tab .flat-button:hover,
+  .floating-menu .option.special:hover
     background: $color !important
 
   // remove backgrounds
@@ -18,7 +19,7 @@ body.th-none
     color: #000000
 
   .floating-menu .option.special:hover
-    color: #ffffff
+    color: #ffffff !important
 
   .ts-tab.active,
   .room-tab .flat-button:hover h3,
