--- a/sass/styles/base/_style.sass
+++ b/sass/styles/base/_style.sass
@@ -3,7 +3,7 @@ $main-text: "#turnStyles a, #overlay a, #pmWindows a, #topBG #content a, #maindi
 
 $border: "#turnStyles.active, .tab-item:active, .tab-item.selected"
 
-$background: "#tsSlider, #buddyList, .overlay .modal, .overlay .modal .title, #settings .volume-slider-fill, #settings .volume-slider-knob:after, #maindiv .song-list .song .scoregood, .floating-menu .option.special:hover"
+$background: "#tsSlider, #buddyList, .overlay .modal, .overlay .modal .title, #settings .volume-slider-fill, #settings .volume-slider-knob:after, #maindiv .song-list .song .scoregood"
 
 $gradient-bg: "#topBG #create-room, #buddyListHeader, .new-modal .title, .new-modal .close-x, .modal button.submit,  .modal button.submit:hover, .pmGreyTop.new-message, .invite-dj, .become-dj, .mini-djs .invite-dj-btn, .mini-djs .become-dj-btn, #topBG .room-list .roomListItem .listenNow"
 
